# state_machine_cpp

./: .gitignore  CMakeLists.txt  README  main.cpp
StateController/: CMakeLists.txt  EventManager.cpp  StateMachine.cpp  StateNode.cpp
StateController/includes/: AbstractState.hpp  BaseEvent.hpp  EventManager.hpp  StateMachine.hpp  StateNode.hpp
States/: CMakeLists.txt  PowerOnResetState.cpp  TestState.cpp
States/includes/: PowerOnResetState.hpp  TestState.hpp
